--- a/Resources/settings.json
+++ b/Resources/settings.json
@@ -1,5 +1,8 @@
-{
-	"AudioEngine": 1,
+{	
+	"Audio": {
+		"Engine": 1,
+		"Music Muted": false
+	},
 	
 	"GamePad": {
 		"Up": 10,
@@ -12,7 +15,7 @@
 		"Maximum Clients" : 2,
 		"Packet Channels" : 1,
 		"Server IP" : "localhost",
-		"Server Port" : 22222,
+		"Server Port" : 11111,
 		"Packet Send Rate Per Second" : 10,
 		"Packet Tick Rate Per Second" : 60
 	}
