--- a/Projects/Client/Client.vcxproj.filters
+++ b/Projects/Client/Client.vcxproj.filters
@@ -118,6 +118,9 @@
     <ClCompile Include="..\..\Source\Client\TerrainTile.cpp">
       <Filter>Source</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\Client\Pathfinding.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\Client\MyNetGame.hpp">
@@ -274,6 +277,9 @@
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\Client\TerrainTile.h">
+      <Filter>Headers</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Client\Pathfinding.h">
       <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
