--- a/Projects/Client/Client.vcxproj
+++ b/Projects/Client/Client.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="..\..\Source\Client\MyNetGame.hpp" />
     <ClInclude Include="..\..\Source\Client\Pathfinding.h" />
     <ClInclude Include="..\..\Source\Client\SearchCell.h" />
+    <ClInclude Include="..\..\Source\Client\States\StateGameOver.h" />
     <ClInclude Include="..\..\Source\Client\States\StateGame.hpp" />
     <ClInclude Include="..\..\Source\Client\States\StateLobby.hpp" />
     <ClInclude Include="..\..\Source\Client\States\StateMenu.hpp" />
@@ -220,6 +221,7 @@
     <ClCompile Include="..\..\Source\Client\main.cpp" />
     <ClCompile Include="..\..\Source\Client\Pathfinding.cpp" />
     <ClCompile Include="..\..\Source\Client\States\StateGame.cpp" />
+    <ClCompile Include="..\..\Source\Client\States\StateGameOver.cpp" />
     <ClCompile Include="..\..\Source\Client\States\StateLobby.cpp" />
     <ClCompile Include="..\..\Source\Client\States\StateMenu.cpp" />
     <ClCompile Include="..\..\Source\Client\States\StatePause.cpp" />
