--- a/Projects/Client/Client.vcxproj.filters
+++ b/Projects/Client/Client.vcxproj.filters
@@ -124,6 +124,9 @@
     <ClCompile Include="..\..\Source\Client\States\StateGameOver.cpp">
       <Filter>Source\States</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\Client\EnemyPanel.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\Source\Client\MyNetGame.hpp">
@@ -261,9 +264,6 @@
     <ClInclude Include="..\..\Source\Client\ListOfNames.hpp">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="SpritePaths.hpp">
-      <Filter>Headers</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Source\Client\Unit.hpp">
       <Filter>Headers</Filter>
     </ClInclude>
@@ -273,13 +273,7 @@
     <ClInclude Include="..\..\Source\Client\Grid.h">
       <Filter>Headers</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\Source\Client\SearchCell.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\Source\Client\TerrainTile.h">
-      <Filter>Headers</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Source\Client\Pathfinding.h">
       <Filter>Headers</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\Client\ActionQueue.h">
@@ -290,6 +284,9 @@
     </ClInclude>
     <ClInclude Include="..\..\Source\Client\States\StateGameOver.h">
       <Filter>Headers\States</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Client\EnemyPanel.h">
+      <Filter>Headers</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
